# propwash

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  LICENSE.MIT  README.md
.github/workflows/: ci.yml
client-godot/: project.godot
client-godot/assets/: cinelog35_v3.glb
client-godot/scripts/: demo_director.gd  demo_pilot.gd  main.gd  main.gd.uid  protocol.gd  protocol.gd.uid  quality.gd  world.gd
client-godot/shaders/: goggle.gdshader  ground.gdshader  ground.gdshader.uid
client-godot/tests/: banner_shot.gd  collision_test.gd  fpv_cull_test.gd  quality_test.gd  repair_flow_test.gd  shader_compile_test.gd  tree_collider_test.gd
config/: cinelog35v3.diff  sitl-overrides.txt
core/: main.cpp
core/input/: joystick.cpp  joystick.h
core/net/: server.cpp  server.h
core/sim/: bf.cpp  bf.h  bfbridge.h  contact_materials.h  physics.cpp  physics.h  profile_cinelog35.h  sim.cpp  sim.h  sim_packets.h  state.h  static_snapshot.cpp  static_snapshot.h
core/sim/util/: vector_math.h
docs/: ARCHITECTURE.md  LICENSING.md
model/: OPENSCAD_VERSION  README.md  build_asset.py  cinelog35_v3.scad  compare_glb.py  regen_check.cmake  validate_glb.py
protocol/: propwash_protocol.h
python/propwash_gym/: README.md  pyproject.toml
python/propwash_gym/examples/: ppo_hover.py
python/propwash_gym/src/propwash_gym/: __init__.py  env.py  protocol.py
python/propwash_gym/tests/: gym_smoke.py  test_env.py
tools/bfcli/: diff_roundtrip_check.py  load_config.sh  pw_cli.py
tools/sysid/: README.md  bblog.py  maneuver.py  profiles.py  record.py  replay.py  runner.py  sysid.py  sysid_check.py  wire.py
tools/tester/: _diag_cli.py  codec_parity_check.py  collision_e2e.py  demo_chapter_check.py  determinism_check.py  main.cpp  msp_check.py  osd_check.py  pw_udp.py  real_config_hover_check.py  reset_determinism.py  run_e2e.sh  state_diff.py  udp_client_check.py
